--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.36.0",
     "astro": "^5.6.1",
+    "react": "^19.1.1",
     "sharp": "^0.34.2"
   }
 }
